--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Mom</h1>
+<h1>Hello, see on vainotuis.github.io</h1>
 <p>I'm hosted with Github Pages.</p>
 </body>
 </html>
