--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello, see on vainotuis.github.io</h1>
-<p>I'm hosted with Github Pages.</p>
+<h1>Hello, see on vainotuisk.github.io</h1>
+<p>Githubi veebileht</p>
 </body>
 </html>
