--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+   <!-- <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+            &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,7 +46,7 @@
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
@@ -60,10 +60,10 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+            &lt;!&ndash; /.navbar-collapse &ndash;&gt;
         </div>
-        <!-- /.container -->
-    </nav>
+        &lt;!&ndash; /.container &ndash;&gt;
+    </nav>-->
 
     <!-- Page Content -->
     <div class="container">
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Parasjagu päevakorral</h1>
-                <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
+                <p class="lead">Koodikirjutamine ja eriti selle õppimine on ainult hobi.</p>
                 <ul class="list-unstyled">
                     <li>Grupper - võistluste ja võistkondade manageerimine</li>
                     <li>Hindaja abimees - hindamine lihtsamaks (veebi- ja mobiilirakendus)</li>
