--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="http://placehold.it/1200x315" alt="...">
+                    <img src="http://lorempixel.com/output/nature-q-c-1200-315-3.jpg" alt="...">
                     <div class="carousel-caption">
                         <h3>Caption Text</h3>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="http://placehold.it/1200x315" alt="...">
+                    <img src="http://lorempixel.com/output/nature-q-c-1200-315-4.jpg" alt="...">
                     <div class="carousel-caption">
                         <h3>Caption Text</h3>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="http://placehold.it/1200x315" alt="...">
+                    <img src="http://lorempixel.com/output/nature-q-c-1200-315-2.jpg" alt="...">
                     <div class="carousel-caption">
                         <h3>Caption Text</h3>
                     </div>
