--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <ul class="list-unstyled">
                     <li>Grupper - võistluste ja võistkondade manageerimine</li>
                     <li>Hindaja abimees - hindamine lihtsamaks (veebi- ja mobiilirakendus)</li>
+                    <li>Laenutused - inventari laenutuse rakendus koolidele (veebi- ja mobiilirakendus)</li>
                 </ul>
             </div>
         </div>
@@ -111,6 +112,19 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
         </div> <!-- Carousel -->
+        <!-- fixed footer -->
+        <div class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container">
+                <p class="navbar-text pull-right">© 2016 - By Väino Tuisk
+                </p>
+
+
+
+            </div>
+            <!-- fixed footer -->
+
+
+        </div>
     </div>
     <!-- /.container -->
 
