--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <li>Grupper - võistluste ja võistkondade manageerimine</li>
                     <li>Hindaja abimees - hindamine lihtsamaks (veebi- ja mobiilirakendus)</li>
                     <li>Laenutused - inventari laenutuse rakendus koolidele (veebi- ja mobiilirakendus)</li>
+                    <li><a href="https://vainotuisk.github.io/myReactTutorial/">React</a></li>
                 </ul>
             </div>
         </div>
