--- a/tants.html
+++ b/tants.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<iframe allowfullscreen="" frameborder="0" mozallowfullscreen="" src="//services.err.ee/media/embed/812057" style="width: 1920px;" webkitallowfullscreen=""></iframe>
+<iframe allowfullscreen="" frameborder="0" mozallowfullscreen="" src="//services.err.ee/media/embed/812057" style="height:1024px; width: 1920px;" webkitallowfullscreen=""></iframe>
 
 </body>
 
