--- a/tants.html
+++ b/tants.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-<iframe allowfullscreen="" frameborder="0" mozallowfullscreen="" src="//services.err.ee/media/embed/812057" style="height:1024px; width: 1920px;" webkitallowfullscreen=""></iframe>
 
-</body>
+<iframe style="width: 670px; height: 377px;" src="//services.err.ee/media/embed/812057" frameborder="0" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
 
 </html>
