--- a/tants.html
+++ b/tants.html
@@ -15,6 +15,6 @@
 
 <body>
 
-<iframe style="width: 1920px; height: 1024;" src="//services.err.ee/media/embed/812057" frameborder="0" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
+<iframe style="width: 1920px; height: 1024px;" src="//services.err.ee/media/embed/812057" frameborder="0" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
 
 </html>
